fix(extended/standing-selector): Improved alignment of icon in the title bar

--- a/packages/shared/assets/css/components/standings-selector.css
+++ b/packages/shared/assets/css/components/standings-selector.css
@@ -32,6 +32,7 @@
 
     .is-title-text {
       svg {
+        display: inline-block;
         height: 16px;
         vertical-align: middle;
       }
